# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  ADAPTATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
.copilot/skills/fastapi-templates/: SKILL.md
.copilot/skills/fastapi-templates/references/: async-best-practices.md  fastapi-architecture.md  testing-strategies.md
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  errors.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  items.py  users.py
app/core/: cache.py  config.py  database.py  logging.py  security.py
app/middleware/: __init__.py
app/migrations/: env.py  script.py.mako
app/models/: __init__.py
app/repositories/: base_repository.py  item_repository.py  user_repository.py
app/schemas/: __init__.py
app/services/: item_service.py  user_service.py
docs/: API.md
scripts/: entrypoint.sh  start.sh
tests/: conftest.py  test_auth.py  test_items.py  test_users.py
