[project]
name = "fastapi-production"
version = "0.1.0"
description = "Production-ready FastAPI application"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
]
